<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/setuptitletext"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:text="@string/consent_reminder"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/form_instructions"
        android:textAlignment="center"
        android:textSize="16sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginVertical="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/participantCodeLabel"
                    android:layout_width="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelorderofcontroltext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <EditText
                    android:id="@+id/participantCode"
                    android:layout_weight="1"
                    android:hint="Enter Code Here"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/tasks"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/tasksLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/tasksSpinner"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>
            <TableRow
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/orientation"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/orientationLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/orientationSpinner"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_instructions"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/setup_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickOK"
                android:text="@string/button01text"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium">
            </Button>

        </LinearLayout>

    </LinearLayout>
