<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/last_taken_image"
        android:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/satisfiedQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/satisfiedq" />

        <RadioGroup
            android:id="@+id/satisfiedAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/satisfiedQ"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yesBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/noBtn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/no" />

        </RadioGroup>

        <TextView
            android:id="@+id/comfortQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/satisfiedAns"
            android:layout_margin="10dp"
            android:text="@string/comfortq" />

        <RadioGroup
            android:id="@+id/comfortRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comfortQ"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/uncomfortable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="1" />

            <RadioButton
                android:id="@+id/bitUncomfortable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="2" />

            <RadioButton
                android:id="@+id/neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="3" />

            <RadioButton
                android:id="@+id/bitComfortable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="4" />

            <RadioButton
                android:id="@+id/comfortable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="5" />

        </RadioGroup>

        <TextView
            android:id="@+id/labelUncomfortable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comfortRating"
            android:layout_marginHorizontal="5dp"
            android:text="Uncomfortable"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comfortRating"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="5dp"
            android:text="Comfortable"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelUncomfortable"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="onSubmit"
            android:text="@string/submit" />

    </RelativeLayout>
</LinearLayout>

